--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 :root{
     --bg-color: #f4f6fa;
     --primary-text-color: #313e51;
+    --secondery-text-color: #626c7f;
     --purple: #a729f5;
     --white: #fff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
@@ -59,8 +60,24 @@ main{
     padding: 32px 24px;
 }
 
-main h1{
+.BoasVindas{
+    margin-bottom: 50px;
+}
+
+.BoasVindas h1{
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
+    margin-bottom: 16px;
+}
+
+.BoasVindas h1 strong{
+    font-weight: 500;
+}
+
+.BoasVindas p{
+    color: var(--secondery-text-color);
+    font-size: 14px;
+    line-height: 150%;
+    font-style: italic;
 }
