primeira parte da estilização dos botões de assunto

--- a/style.css
+++ b/style.css
@@ -10,12 +10,17 @@
     --primary-text-color: #313e51;
     --secondery-text-color: #626c7f;
     --purple: #a729f5;
-    --white: #fff;
+    --bg-button: #fff;
+    --shadow: 0px 16px 40px 0px rgba(143, 168, 193, 0.14);
+    --bg-html: #fff1e9;
+    --bg-css: #e0fdef;
+    --bg-js: #ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
 }
 
 body{
-    height: 100vh;
+    height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
@@ -80,4 +85,39 @@ main{
     font-size: 14px;
     line-height: 150%;
     font-style: italic;
+}
+
+.assuntos{
+    border: 1px red solid;
+
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.assuntos button{
+    border: none;
+    background-color: var(--bg-button);
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
+}
+
+.buttonHtml div{
+    background: var(--bg-html);
+}
+
+.buttonCss div{
+    background: var(--bg-css);
+}
+
+.buttonJs div{
+    background: var(--bg-js);
+}
+
+.buttonAcessibilidade div{
+    background: var(--bg-acessibilidade);
 }
