versão mobil finalizada

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ main{
 }
 
 .assuntos button{
+    
     border: none;
     background-color: var(--bg-button);
     display: flex;
@@ -104,6 +105,20 @@ main{
     padding: 12px;
     border-radius: 12px;
     box-shadow: var(--shadow);
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--primary-text-color);
+}
+
+.assuntos button div {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.assuntos img{
+    width: 100%;
 }
 
 .buttonHtml div{
