--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --primary-text-color: #313e51;
     --secondery-text-color: #626c7f;
     --purple: #a729f5;
+    --bg-button: #fff;
     --white: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 168, 193, 0.14);
     --bg-html: #fff1e9;
@@ -18,6 +19,16 @@
     --bg-acessibilidade: #f6e7ff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg);
+}
+
+body.dark{
+    --bg-color: #313e51;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
+    --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
+    --primary-text-color: #fff;
+    --secondery-text-color: #abc1e1;
+    --bg-button: #3b4d66;
+    --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
 body{
@@ -97,7 +108,7 @@ main{
 .assuntos button{
 
     border: none;
-    background-color: var(--white);
+    background-color: var(--bg-button);
     display: flex;
     align-items: center;
     gap: 16px;
