--- a/Resultados/resultado.css
+++ b/Resultados/resultado.css
@@ -13,7 +13,7 @@
     --secondery-text-color: #626c7f;
     --purple: #a729f5;
     --purple-hover: rgba(167, 41, 245, 0.6);
-    --bg-button: #fff;
+    --bg-pontuacao: #fff;
     --white: #fff;
     --green: #26d782;
     --red: #ee5454;
@@ -33,7 +33,7 @@ body.dark{
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
     --secondery-text-color: #abc1e1;
-    --bg-button: #3b4d66;
+    --bg-pontuacao: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
@@ -101,6 +101,63 @@ header{
     width: 12px;
     border-radius: 999px;
 }
+
+main{
+    padding: 32px 24px;
+}
+
+main h2{
+    font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color);
+    margin-bottom: 40px;
+}
+
+main h2 strong{
+    font-weight: 500;
+}
+
+/*PONTUAÇÃO*/
+.pontuacao{
+    background: var(--bg-pontuacao);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    border-radius: 12px;
+    margin-bottom: 12px;
+}
+
+.pontuacao strong{
+    font-size: 88px;
+    color: var(--primary-text-color);
+    font-weight: 500;
+}
+.pontuacao p{
+    color: var(--secondery-text-color);
+    font-size: 18px;
+}
+
+main button{
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+
+    transition: background 0.7s;
+}
+
+main button:hover{
+    background: var(--purple-hover);
+    cursor: pointer;
+}
+
+
 
 @media(min-width: 1100px){
     body{
