ajuste do box shadow

--- a/Resultados/resultado.css
+++ b/Resultados/resultado.css
@@ -127,6 +127,7 @@ main h2 strong{
     gap: 16px;
     border-radius: 12px;
     margin-bottom: 12px;
+    box-shadow: var(--shadow);
 }
 
 .pontuacao strong{
@@ -148,7 +149,8 @@ main button{
     width: 100%;
     font-size: 18px;
     font-weight: 500;
-
+    box-shadow: var(--shadow);
+    
     transition: background 0.7s;
 }
 
