adicao do js no quiz

--- a/pages/Quiz/quiz.css
+++ b/pages/Quiz/quiz.css
@@ -269,6 +269,8 @@ main{
     .tema button{
         width: 48px;
         height: 28px;
+        display: flex;
+        cursor: pointer;
     }
 
     .tema button div{
