--- a/pages/Quiz/quiz.css
+++ b/pages/Quiz/quiz.css
@@ -58,11 +58,26 @@ header{
 }
 
 .assuntoIcone{
-    background: var(--bg-acessibilidade);
     padding: 5px;
     width: 40px;
     height: 40px;
     border-radius: 5px;
+}
+
+.assuntoIcone.html{
+    background: var(--bg-html);
+}
+
+.assuntoIcone.css{
+    background: var(--bg-css);
+}
+
+.assuntoIcone.javascript{
+    background: var(--bg-js);
+}
+
+.assuntoIcone.acessibilidade{
+    background: var(--bg-acessibilidade);
 }
 
 .assuntoIcone img{
